# s3-cli

./: Cargo.toml  README.md
src/: main.rs
