[package]
name = "true-s3-cli"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "S3 CLI implementation"
repository = "https://github.com/4e6uREK/s3-cli"
homepage = "https://github.com/4e6uREK/s3-cli"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
tar = "0.4"
home = "0.5"
serde_json = "1.0"
serde_ini = "0.2.0"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
rusoto_credential = "0.48.0"

[profile.release]
lto = true
panic = "abort"
